# vecc-summer-2023

./: .gitignore  .gitlogin
geant4/firstprog/: CMakeLists.txt  firstprog.cc  init.mac
geant4/firstprog/include/: ActionInitialization.hh  DetectorConstruction.hh  PrimaryGeneratorAction.hh
geant4/firstprog/src/: ActionInitialization.cc  DetectorConstruction.cc  PrimaryGeneratorAction.cc
geant4/hex/: AliPmdAnalysisTask.cxx  AnalysisResults.root  CMakeLists.txt  DetectorConstruction _save.cc  EventStat_temp.root  PMD.C  TaskQA.root  checkev.C  checkevreal.C  cluster.C  clusterreal.C  counts.txt  event_stat.root  hex.cc  hex_10000MeV.root  hex_1000MeV.root  hex_100MeV.root  hex_10MeV.root  hex_30000MeV.root  hex_5000MeV.root  hitsdata.txt  init.mac  plotCell.C  plotHisto.C  plotPerCellEdep.C  plots.C  run.mac
geant4/hex/data_air/: hex_10000MeV.root  hex_1000MeV.root  hex_100MeV.root  hex_10MeV.root  hex_200MeV.root  hex_20MeV.root  hex_5000MeV.root  hex_500MeV.root  hex_50MeV.root  hex_80MeV.root
geant4/hex/data_cu/: hex_10000MeV.root  hex_1000MeV.root  hex_100MeV.root  hex_10MeV.root  hex_200MeV.root  hex_20MeV.root  hex_5000MeV.root  hex_500MeV.root  hex_50MeV.root  hex_80MeV.root
geant4/hex/data_cu_0.1/: hex_10000MeV.root  hex_1000MeV.root  hex_100MeV.root  hex_10MeV.root  hex_200MeV.root  hex_20MeV.root  hex_5000MeV.root  hex_500MeV.root  hex_50MeV.root  hex_80MeV.root
geant4/hex/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  TrackerHit.hh  TrackerSD.hh
geant4/hex/macros/: backscatter.C  checkev.C  checkevreal.C  cluster.C  countperev.C  plotCell.C  plotHisto.C  plots.C
(+7 files in other folders)
